# todo_clean

./: README.md  pyproject.toml
src/todo_clean/: __main__.py
src/todo_clean/layer0/: __init__.py
src/todo_clean/layer0/entity/: task.py
src/todo_clean/layer1/: __init__.py
src/todo_clean/layer1/repository/: create_task_repository.py  i_task_repo.py
src/todo_clean/layer1/usecase/: create_new_task.py  create_task.py  delete_task.py  delete_task_by_id.py  get_task.py  get_task_by_id.py  get_tasks.py
src/todo_clean/layer2/: __init__.py
src/todo_clean/layer2/controller/: controller copy.py  create_task_controller.py  delete_task_by_id_controller.py  get_task_by_id_controller.py  get_tasks_controller.py
src/todo_clean/layer2/presenter/: create_task_presenter.py  delete_task_by_id_presenter.py  get_task_by_id_presenter.py  get_tasks_presenter.py
src/todo_clean/layer3/: __init__.py
src/todo_clean/layer3/repository/: create_task_repository.py  (+2 more)
tests/test_controller/: test_create_task_controller.py  test_delete_task_by_id_controller.py  test_get_task_by_id_controller.py  test_get_tasks_controller.py
tests/test_presenter/: test_create_task_gui_presenter.py  test_delete_task_by_id_gui_presenter.py  test_get_task_by_id_gui_presenter.py  test_get_tasks_gui_presenter.py
tests/test_repository/: test_create_task_repository.py  test_delete_task_by_id_repository.py  test_get_tasks_repository.py
tests/test_usecase/: test_create_new_task.py  test_create_task.py  test_delete_task_by_id.py  test_get_task.py  test_get_task_by_id.py  test_get_tasks.py
(+1 files in other folders)
