[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo_clean"
version = "1.0.0"
dependencies = []
authors = [
    { name = "Adriano Rodrigues de Paula", email = "adrianordp1@gmail.com" },
]

description = """
TODO app with clean architecture
"""
readme = "README.md"

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "pytest-cov", "pylint"]

[project.scripts]
todo_clean = "todo_clean.__main__:main"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pylint.'MAIN']
source-roots = "src"
disable = "too-few-public-methods"
